Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8
-
None
-
-
5
-
1df1c0b6f (dev), eaa78fb2b (6.8), c9c498b5d (dev), 3f85834a4 (6.8)
-
Foundation Sprint 111
Description
❯ /Users/torarne/build/qt/6.x-tests/qtbase/tests/auto/corelib/text/qlocale/syslocaleapp/syslocaleapp
ASSERT: "sameLocale(locale.d->m_data, monthly)" in file /Users/torarne/dev/qt/qtbase/src/corelib/text/qlocale.cpp, line 3174
zsh: abort
Causes tst_QLocale to fail:
164: FAIL! : tst_QLocale::systemLocale(en_.@) 'runSysAppTest(m_sysapp, cleanEnv, request, expected, &errorMessage)' returned FALSE. (Empty output received for requested 'en_.@' (expected 'en_US Ordibehesht')) 164: Loc: [/Users/torarne/dev/qt/qtbase/tests/auto/corelib/text/qlocale/tst_qlocale.cpp(721)]
Attachments
For Gerrit Dashboard: QTBUG-126390 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
575204,3 | Fix sameLocale() assertions in qlocale.cpp | dev | qt/qtbase | Status: MERGED | +2 | 0 |
575312,2 | Fix sameLocale() assertions in qlocale.cpp | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
575401,3 | Tidy up fix for calendar/locale data lookup | dev | qt/qtbase | Status: MERGED | +2 | +1 |
576477,2 | Tidy up fix for calendar/locale data lookup | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |